added recognition of command line arguments

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "cli_wether_report",
+  "name": "cli_weather_report",
   "version": "1.0.0",
   "description": "CLI for getting weather",
-  "main": "index.js",
-  "bin": "./index.js",
+  "main": "weather.js",
+  "bin": {
+    "weather": "weather.js"
+  },
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +19,8 @@
   "repository": {
     "type": "git",
     "url": ""
+  },
+  "dependencies": {
+    "axios": "^1.2.2"
   }
 }
