--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "url": ""
   },
   "dependencies": {
-    "axios": "^1.2.2"
+    "axios": "^1.2.2",
+    "chalk": "^5.2.0",
+    "dedent-js": "^1.0.1"
   }
 }
